Fixes modal scrollbar padding issue (fix #14)

--- a/web/src/main/resources/static/css/freelancer.css
+++ b/web/src/main/resources/static/css/freelancer.css
@@ -595,3 +595,11 @@ body {
 .modal-body .btn {
     margin-bottom: 10px;
 }
+
+/* Modal scrollbar fix */
+body.modal-open {
+    padding-right: inherit !important;
+}
+.modal {
+    padding-right: 0 !important;
+}
